--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo TODO",
+    "clean": "rimraf dist",
     "start": "parcel --port 8000 index.html",
+    "build": "parcel build --public-url . index.html",
+    "dist": "npm run clean && npm run build",
     "fmt": "prettier --single-quote --use-tabs --write src index.html"
   },
   "repository": {
@@ -30,6 +33,7 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   }
 }
