--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TodoMVC of capsid.js 2020 version",
   "main": "index.js",
   "scripts": {
-    "test": "echo TODO",
+    "test": "start-server-and-test start http://localhost:8000 'cypress run'",
     "clean": "rimraf docs",
     "start": "parcel --port 8000 index.html",
     "build": "parcel build --public-url . --out-dir docs index.html",
@@ -31,9 +31,11 @@
     "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
+    "cypress": "^3.4.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "start-server-and-test": "^1.11.5",
     "typescript": "^4.0.3"
   }
 }
