--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "parcel --port 8000 index.html",
     "build": "parcel build --public-url . --out-dir docs index.html",
     "dist": "npm run clean && npm run build",
-    "fmt": "prettier --single-quote --use-tabs --write src index.html"
+    "fmt": "prettier --single-quote --write src cypress index.html"
   },
   "repository": {
     "type": "git",
